
import("//sdkpath.gni")


static_library("media") {

  include_dirs = [

    "$ndkIncludePath",
    "$sdkPath/include/c++/7.2.0",
    "$sdkPath/include/c++/7.2.0/include",
    "$sdkPath/include/c++/7.2.0/x86_64-unknown-linux-gnu/",
    "$sdkPath2/usr/lib/x86_64-linux-gnu/glib-2.0/include",

    "$sdkPath/sysroot/usr/include",
    "$sdkPath/sysroot/usr/",
    "$sdkPath/sysroot/usr/include/linux",
    "$sdkPath2/usr/include/libdrm",

    "//",

    "$sdkPath2/usr/include/cairo",
    "$sdkPath2/usr/include/glib-2.0",
    "$sdkPath2/usr/include/gtk-3.0",
    "$sdkPath2/usr/include/gdk-pixbuf-2.0",
    "$sdkPath2/usr/include/atk-1.0",
    "$sdkPath2/usr/include/pango-1.0",

    "//linux",

    "$sdkPath2/usr/include",

    "//gen/v8/include",
    "//v8",
    "//v8/include",
    "//gen",
    "//third_party/",
    "//third_party/abseil-cpp",
    "//third_party/icu/source/common",
    "//audio_manager_base/blink",
    "//gen/blink/core",
    "//gen/blink/bindings/modules/v8",
    "//gen/blink/bindings/core/v8",
    "//gpu",
    "//third_party/libyuv/include",
    "//third_party/openssl/openssl/include",
    "//third_party/khronos",
    "//third_party/libxml/src/include",
    "//third_party/libxml/win32/include",
    "//third_party/fontconfig/src",
    "//third_party/skia",
    "//third_party/skia/include/core",
    "//third_party/skia/include/config",
    "//third_party/skia/include/codec",
    "//third_party/skia/include/device",
    "//third_party/skia/include/effects",
    "//third_party/skia/include/images",
    "//third_party/skia/include/pathops",
    "//third_party/skia/include/ports",
    "//third_party/skia/include/private",
    "//third_party/skia/include/utils",
    "//third_party/skia/include/gpu",
    "//third_party/angle/include",
    "//third_party/angle/src",
    "//third_party/icu/source/common",
    "//third_party/khronos",
    "//third_party/ffmpeg",
    "//third_party/ffmpeg/chromium/config/Chromium/linux-noasm/x64",

  ]


  cflags = [

    "-fms-extensions",
    "-D_GLIBCXX_USE_C99_MATH",
    "-D_GNU_SOURCE",
    "-DUSE_GLIB=1",
    "-DUSE_AURA=1",
    "-DOS_LINUX_FOR_WIN=1",
    "-D_HAS_CONSTEXPR=0",
    "-DNO_TCMALLOC=1",
    "-DUSE_OZONE",
    "-DANGLE_ENABLE_GLSL=1",
    "-DMEDIA_IMPLEMENTATION=1",
    "-DSK_SUPPORT_LEGACY_DRAWLOOPER",


    #  audio
    "-DUSE_ALSA",

    #  media
    "-DENABLE_MB_MEDIA=1",

    #  gtk:
    # "-DSK_B32_SHIFT=0",
    # "-DSK_G32_SHIFT=8",
    # "-DSK_R32_SHIFT=16",
    # "-DSK_A32_SHIFT=24",

    #  opengl
    # "-DSK_B32_SHIFT=16",
    # "-DSK_G32_SHIFT=8",
    # "-DSK_R32_SHIFT=0",
    # "-DSK_A32_SHIFT=24",

    "-DDYNAMIC_ANNOTATIONS_ENABLED=0",
    "-DV8_OS_LINUX",
    "-DBUILDING_V8_SHARED=1",
    "-DBUILDING_UV_SHARED=1",
    "-DV8_HOST_ARCH_X64",
    "-DV8_TYPED_ARRAY_MAX_SIZE_IN_HEAP=64",
    "-DV8_INTL_SUPPORT",
    "-DV8_USE_EXTERNAL_STARTUP_DATA",
    "-DV8_ATOMIC_OBJECT_FIELD_WRITES",
    "-DV8_ENABLE_LAZY_SOURCE_POSITIONS",
    "-DV8_SHARED_RO_HEAP",
    "-DV8_ENABLE_REGEXP_INTERPRETER_THREADED_DISPATCH",
    "-DV8_SHORT_BUILTIN_CALLS",
    "-DV8_EXTERNAL_CODE_SPACE",
    "-DV8_ENABLE_MAGLEV",
    "-DV8_ENABLE_SYSTEM_INSTRUMENTATION",
    "-DV8_ENABLE_ETW_STACK_WALKING",
    "-DV8_ENABLE_WEBASSEMBLY",
    "-DV8_ALLOCATION_FOLDING",
    "-DV8_ALLOCATION_SITE_TRACKING",
    "-DV8_ADVANCED_BIGINT_ALGORITHMS",
    "-DV8_USE_ZLIB",
    "-DV8_COMPRESS_POINTERS",
    "-DV8_COMPRESS_POINTERS_IN_SHARED_CAGE",
    "-DV8_31BIT_SMIS_ON_64BIT_ARCH",
    "-DV8_DEPRECATION_WARNINGS",
    "-DCPPGC_CAGED_HEAP",
    "-DCPPGC_YOUNG_GENERATION",
    "-DCPPGC_POINTER_COMPRESSION",
    "-DV8_TARGET_ARCH_X64",
    "-DV8_HAVE_TARGET_OS",
    "-DV8_TARGET_OS_LINUX",
    "-D_LIB",

    "-fPIC", 
    "-fno-exceptions", 
    "-fvisibility=hidden", 
    "--target=x86_64-linux-guneabi", 
    "-DUSE_EGL", 
    "-DSK_GL", 
    "-DSK_SUPPORT_GPU=1", 
    "-DSK_GRAPHITE_ENABLED", 
    "-DSK_SUPPORT_LEGACY_SLUG_CONVERT", 
    "-DSK_B32_SHIFT=16", 
    "-DSK_G32_SHIFT=8", 
    "-DSK_R32_SHIFT=0", 
    "-DSK_A32_SHIFT=24", 
    "-DOS_LINUX=1", 
    "-DENABLE_MB_MEDIA=1", 
    "-DV8_HOST_ARCH_X64", 
    "-DV8_TARGET_ARCH_X64", 
    "-D__POINT_SIZE__=8", 
    "-D__USE_OPENGL__", 
    "-DV8_ENABLE_MAGLEV", 
    "-mno-avx", 
    "-DV8_EXTERNAL_CODE_SPACE",
    "-DV8_DEPRECATION_WARNINGS", 
    "-DV8_COMPRESS_POINTERS", 
    "-DV8_COMPRESS_POINTERS_IN_SHARED_CAGE", 
    "-DV8_31BIT_SMIS_ON_64BIT_ARCH", 
    "-DCPPGC_CAGED_HEAP", 
    "-DCPPGC_YOUNG_GENERATION", 
    "-DCPPGC_POINTER_COMPRESSION", 

  ]

  sources = [

    "//services/audio/delay_buffer.cc",
    "//services/audio/device_listener_output_stream.cc",
    "//services/audio/device_notifier.cc",
    "//services/audio/input_controller.cc",
    "//services/audio/input_glitch_counter.cc",
    "//services/audio/input_stream.cc",
    "//services/audio/input_sync_writer.cc",
    "//services/audio/local_muter.cc",
    "//services/audio/log_adapter.cc",
    "//services/audio/log_factory_adapter.cc",
    "//services/audio/log_factory_manager.cc",
    "//services/audio/loopback_coordinator.cc",
    "//services/audio/loopback_stream.cc",
    "//services/audio/mixing_graph.cc",
    "//services/audio/mixing_graph_impl.cc",
    "//services/audio/output_controller.cc",
    "//services/audio/output_device_mixer.cc",
    "//services/audio/output_device_mixer_impl.cc",
    "//services/audio/output_device_mixer_manager.cc",
    "//services/audio/output_stream.cc",
    "//services/audio/output_tapper.cc",
    "//services/audio/owning_audio_manager_accessor.cc",
    "//services/audio/processing_audio_fifo.cc",
    "//services/audio/realtime_audio_thread.cc",
    "//services/audio/service.cc",
    "//services/audio/service_factory.cc",
    "//services/audio/service_metrics.cc",
    "//services/audio/snooper_node.cc",
    "//services/audio/stream_factory.cc",
    "//services/audio/sync_mixing_graph_input.cc",
    "//services/audio/sync_reader.cc",
    "//services/audio/system_info.cc",
    "//media/audio/aecdump_recording_manager.cc",
    "//media/audio/alive_checker.cc",
    "//media/audio/audio_bus_pool.cc",
    "//media/audio/audio_debug_file_writer.cc",
    "//media/audio/audio_debug_recording_helper.cc",
    "//media/audio/audio_debug_recording_manager.cc",
    "//media/audio/audio_device_description.cc",
    "//media/audio/audio_device_name.cc",
    "//media/audio/audio_device_thread.cc",
    "//media/audio/audio_features.cc",
    "//media/audio/audio_input_delegate.cc",
    "//media/audio/audio_input_device.cc",
    "//media/audio/audio_input_ipc.cc",
    "//media/audio/audio_input_stream_data_interceptor.cc",
    "//media/audio/audio_io.cc",
    "//media/audio/audio_manager.cc",
    "//media/audio/audio_manager_base.cc",
    "//media/audio/audio_output_delegate.cc",
    "//media/audio/audio_output_device.cc",
    "//media/audio/audio_output_device_thread_callback.cc",
    "//media/audio/audio_output_dispatcher.cc",
    "//media/audio/audio_output_dispatcher_impl.cc",
    "//media/audio/audio_output_ipc.cc",
    "//media/audio/audio_output_proxy.cc",
    "//media/audio/audio_output_resampler.cc",
    "//media/audio/audio_output_stream_sink.cc",
    "//media/audio/audio_sink_parameters.cc",
    "//media/audio/audio_source_parameters.cc",
    "//media/audio/audio_system.cc",
    "//media/audio/audio_system_helper.cc",
    "//media/audio/audio_system_impl.cc",
    "//media/audio/audio_thread_hang_monitor.cc",
    "//media/audio/audio_thread_impl.cc",
    "//media/audio/clockless_audio_sink.cc",
    "//media/audio/fake_audio_input_stream.cc",
    "//media/audio/fake_audio_log_factory.cc",
    "//media/audio/fake_audio_manager.cc",
    "//media/audio/fake_audio_output_stream.cc",
    "//media/audio/null_audio_sink.cc",
    "//media/audio/power_observer_helper.cc",
    "//media/audio/scoped_task_runner_observer.cc",
    "//media/audio/simple_sources.cc",
    "//media/audio/system_glitch_reporter.cc",
    "//media/audio/wav_audio_handler.cc",
    "//media/audio/wav_audio_handler_fuzzer.cc",
    #  "//media/audio/win/audio_device_listener_win.cc",
    #  "//media/audio/win/audio_edid_scan_win.cc",
    #  "//media/audio/win/audio_low_latency_input_win.cc",
    #  "//media/audio/win/audio_low_latency_output_win.cc",
    #  "//media/audio/win/audio_manager_win.cc",
    #  "//media/audio/win/audio_session_event_listener_win.cc",
    #  "//media/audio/win/avrt_wrapper_win.cc",
    #  "//media/audio/win/core_audio_util_win.cc",
    #  "//media/audio/win/device_enumeration_win.cc",
    #  "//media/audio/win/volume_range_util.cc",
    #  "//media/audio/win/wavein_input_win.cc",
    #  "//media/audio/win/waveout_output_win.cc",
    "//media/audio/linux/audio_manager_linux.cc",
    "//media/audio/alsa/alsa_input.cc",
    "//media/audio/alsa/alsa_output.cc",
    "//media/audio/alsa/alsa_util.cc",
    "//media/audio/alsa/alsa_wrapper.cc",
    "//media/audio/alsa/audio_manager_alsa.cc",

    "//media/base/android_overlay_config.cc",
    "//media/base/audio_block_fifo.cc",
    "//media/base/audio_buffer.cc",
    "//media/base/audio_buffer_converter.cc",
    "//media/base/audio_buffer_queue.cc",
    "//media/base/audio_bus.cc",
    "//media/base/audio_codecs.cc",
    "//media/base/audio_converter.cc",
    "//media/base/audio_decoder.cc",
    "//media/base/audio_decoder_config.cc",
    "//media/base/audio_discard_helper.cc",
    "//media/base/audio_encoder.cc",
    "//media/base/audio_fifo.cc",
    "//media/base/audio_hash.cc",
    "//media/base/audio_latency.cc",
    "//media/base/audio_parameters.cc",
    "//media/base/audio_point.cc",
    "//media/base/audio_power_monitor.cc",
    "//media/base/audio_processing.cc",
    "//media/base/audio_pull_fifo.cc",
    "//media/base/audio_push_fifo.cc",
    "//media/base/audio_renderer.cc",
    "//media/base/audio_renderer_mixer.cc",
    "//media/base/audio_renderer_mixer_input.cc",
    "//media/base/audio_shifter.cc",
    "//media/base/audio_timestamp_helper.cc",
    "//media/base/bitrate.cc",
    "//media/base/bitstream_buffer.cc",
    "//media/base/bit_reader.cc",
    "//media/base/bit_reader_core.cc",
    "//media/base/buffering_state.cc",
    "//media/base/byte_queue.cc",
    "//media/base/cdm_callback_promise.cc",
    "//media/base/cdm_config.cc",
    "//media/base/cdm_context.cc",
    "//media/base/cdm_factory.cc",
    "//media/base/cdm_initialized_promise.cc",
    "//media/base/cdm_key_information.cc",
    "//media/base/cdm_promise.cc",
    "//media/base/cdm_promise_adapter.cc",
    "//media/base/cdm_session_tracker.cc",
    "//media/base/channel_layout.cc",
    "//media/base/channel_mixer.cc",
    "//media/base/channel_mixing_matrix.cc",
    "//media/base/color_plane_layout.cc",
    "//media/base/container_names.cc",
    "//media/base/content_decryption_module.cc",
    "//media/base/converting_audio_fifo.cc",
    "//media/base/data_buffer.cc",
    "//media/base/data_source.cc",
    "//media/base/decoder.cc",
    "//media/base/decoder_buffer.cc",
    "//media/base/decoder_buffer_queue.cc",
    "//media/base/decoder_factory.cc",
    "//media/base/decoder_status.cc",
    "//media/base/decryptor.cc",
    "//media/base/decrypt_config.cc",
    "//media/base/demuxer.cc",
    "//media/base/demuxer_memory_limit_cast.cc",
    "//media/base/demuxer_memory_limit_default.cc",
    "//media/base/demuxer_memory_limit_low.cc",
    "//media/base/demuxer_stream.cc",
    "//media/base/djb2.cc",
    "//media/base/encryption_pattern.cc",
    "//media/base/encryption_scheme.cc",
    "//media/base/fake_audio_worker.cc",
    "//media/base/format_utils.cc",
    "//media/base/frame_rate_estimator.cc",
    "//media/base/key_systems.cc",
    "//media/base/key_system_info.cc",
    "//media/base/key_system_names.cc",
    "//media/base/localized_strings.cc",
    "//media/base/loopback_audio_converter.cc",
    "//media/base/media.cc",
    "//media/base/media_client.cc",
    "//media/base/media_content_type.cc",
    "//media/base/media_drm_storage.cc",
    "//media/base/media_log.cc",
    "//media/base/media_log_events.cc",
    "//media/base/media_log_message_levels.cc",
    "//media/base/media_log_properties.cc",
    "//media/base/media_observer.cc",
    "//media/base/media_permission.cc",
    "//media/base/media_player_logging_id.cc",
    "//media/base/media_resource.cc",
    "//media/base/media_status.cc",
    "//media/base/media_switches.cc",
    "//media/base/media_track.cc",
    "//media/base/media_tracks.cc",
    "//media/base/media_types.cc",
    "//media/base/media_url_demuxer.cc",
    "//media/base/media_url_params.cc",
    "//media/base/media_util.cc",
    "//media/base/memory_dump_provider_proxy.cc",
    "//media/base/mime_util.cc",
    "//media/base/mime_util_internal.cc",
    "//media/base/moving_average.cc",
    "//media/base/multi_channel_resampler.cc",
    "//media/base/null_video_sink.cc",
    "//media/base/offloading_audio_encoder.cc",
    "//media/base/offloading_video_encoder.cc",
    "//media/base/output_device_info.cc",
    "//media/base/overlay_info.cc",
    "//media/base/pipeline_impl.cc",
    "//media/base/pipeline_metadata.cc",
    "//media/base/pipeline_status.cc",
    "//media/base/ranges.cc",
    "//media/base/reentrancy_checker.cc",
    "//media/base/renderer.cc",
    "//media/base/renderer_client.cc",
    "//media/base/renderer_factory.cc",
    "//media/base/renderer_factory_selector.cc",
    "//media/base/sample_format.cc",
    "//media/base/sample_rates.cc",
    "//media/base/scoped_async_trace.cc",
    "//media/base/seekable_buffer.cc",
    "//media/base/serial_runner.cc",
    "//media/base/silent_sink_suspender.cc",
    "//media/base/simple_sync_token_client.cc",
    "//media/base/simple_watch_timer.cc",
    "//media/base/sinc_resampler.cc",
    "//media/base/status.cc",
    "//media/base/stream_parser.cc",
    "//media/base/stream_parser_buffer.cc",
    "//media/base/subsample_entry.cc",
    "//media/base/supported_types.cc",
    "//media/base/supported_video_decoder_config.cc",
    "//media/base/svc_scalability_mode.cc",
    "//media/base/text_cue.cc",
    "//media/base/text_ranges.cc",
    "//media/base/text_renderer.cc",
    "//media/base/text_track_config.cc",
    "//media/base/time_delta_interpolator.cc",
    "//media/base/tuneable.cc",
    "//media/base/user_input_monitor.cc",
    "//media/base/user_input_monitor_linux.cc",
    "//media/base/vector_math.cc",
    "//media/base/video_aspect_ratio.cc",
    "//media/base/video_bitrate_allocation.cc",
    "//media/base/video_codecs.cc",
    "//media/base/video_color_space.cc",
    "//media/base/video_decoder.cc",
    "//media/base/video_decoder_config.cc",
    "//media/base/video_encoder.cc",
    "//media/base/video_frame.cc",
    "//media/base/video_frame_layout.cc",
    "//media/base/video_frame_metadata.cc",
    "//media/base/video_frame_pool.cc",
    "//media/base/video_renderer.cc",
    "//media/base/video_thumbnail_decoder.cc",
    "//media/base/video_transformation.cc",
    "//media/base/video_types.cc",
    "//media/base/video_util.cc",
    "//media/base/wait_and_replace_sync_token_client.cc",
    "//media/base/wall_clock_time_source.cc",
    "//media/base/watch_time_keys.cc",
    #  "//media/base/win/dxgi_device_manager.cc",
    #  "//media/base/win/mf_feature_checks.cc",
    #  "//media/base/win/mf_helpers.cc",
    #  "//media/base/win/mf_initializer.cc",
    "//media/capture/capture_switches.cc",
    "//media/capture/content/animated_content_sampler.cc",
    "//media/capture/content/capture_resolution_chooser.cc",
    "//media/capture/content/smooth_event_sampler.cc",
    "//media/capture/content/video_capture_oracle.cc",
    "//media/capture/mojom/image_capture_types.cc",
    "//media/capture/mojom/video_capture_types_mojom_traits.cc",
    "//media/capture/video/blob_utils.cc",
    "//media/capture/video/create_video_capture_device_factory.cc",
    "//media/capture/video/fake_video_capture_device.cc",
    "//media/capture/video/fake_video_capture_device_factory.cc",
    "//media/capture/video/file_video_capture_device.cc",
    "//media/capture/video/file_video_capture_device_factory.cc",
    "//media/capture/video/gpu_memory_buffer_utils.cc",
    "//media/capture/video/shared_memory_buffer_tracker.cc",
    "//media/capture/video/video_capture_buffer_handle.cc",
    "//media/capture/video/video_capture_buffer_pool_impl.cc",
    "//media/capture/video/video_capture_buffer_pool_util.cc",
    "//media/capture/video/video_capture_buffer_tracker.cc",
    "//media/capture/video/video_capture_buffer_tracker_factory_impl.cc",
    "//media/capture/video/video_capture_device.cc",
    "//media/capture/video/video_capture_device_client.cc",
    "//media/capture/video/video_capture_device_descriptor.cc",
    "//media/capture/video/video_capture_device_factory.cc",
    "//media/capture/video/video_capture_device_info.cc",
    "//media/capture/video/video_capture_feedback.cc",
    "//media/capture/video/video_capture_metrics.cc",
    "//media/capture/video/video_capture_system_impl.cc",
    "//media/capture/video/video_frame_receiver.cc",
    "//media/capture/video/video_frame_receiver_on_task_runner.cc",
    #  "//media/capture/video/win/capability_list_win.cc",
    #  "//media/capture/video/win/filter_base_win.cc",
    #  "//media/capture/video/win/gpu_memory_buffer_tracker.cc",
    #  "//media/capture/video/win/metrics.cc",
    #  "//media/capture/video/win/pin_base_win.cc",
    #  "//media/capture/video/win/sink_filter_win.cc",
    #  "//media/capture/video/win/sink_input_pin_win.cc",
    #  "//media/capture/video/win/video_capture_buffer_tracker_factory_win.cc",
    #  "//media/capture/video/win/video_capture_device_factory_win.cc",
    #  "//media/capture/video/win/video_capture_device_mf_win.cc",
    #  "//media/capture/video/win/video_capture_device_utils_win.cc",
    #  "//media/capture/video/win/video_capture_device_win.cc",
    "//media/capture/video/linux/video_capture_device_linux.cc",
    "//media/capture/video/linux/video_capture_device_factory_linux.cc",
    "//media/capture/video_capture_types.cc",
    "//media/ffmpeg/ffmpeg_common.cc",
    "//media/ffmpeg/ffmpeg_decoding_loop.cc",
    "//media/ffmpeg/scoped_av_packet.cc",
    "//media/filters/audio_clock.cc",
    "//media/filters/audio_file_reader.cc",
    "//media/filters/audio_renderer_algorithm.cc",
    "//media/filters/audio_timestamp_validator.cc",
    "//media/filters/audio_video_metadata_extractor.cc",
    "//media/filters/blocking_url_protocol.cc",
    "//media/filters/chunk_demuxer.cc",
    "//media/filters/dav1d_video_decoder.cc",
    "//media/filters/decoder_selector.cc",
    "//media/filters/decoder_stream.cc",
    "//media/filters/decoder_stream_traits.cc",
    "//media/filters/decrypting_audio_decoder.cc",
    "//media/filters/decrypting_demuxer_stream.cc",
    "//media/filters/decrypting_media_resource.cc",
    "//media/filters/decrypting_video_decoder.cc",
    "//media/filters/ffmpeg_aac_bitstream_converter.cc",
    "//media/filters/ffmpeg_audio_decoder.cc",
    "//media/filters/ffmpeg_demuxer.cc",
    "//media/filters/ffmpeg_glue.cc",
    "//media/filters/ffmpeg_h264_to_annex_b_bitstream_converter.cc",
    "//media/filters/ffmpeg_h265_to_annex_b_bitstream_converter.cc",
    "//media/filters/ffmpeg_video_decoder.cc",
    "//media/filters/file_data_source.cc",
    "//media/filters/frame_buffer_pool.cc",
    "//media/filters/frame_processor.cc",
    "//media/filters/h264_bitstream_buffer.cc",
    "//media/filters/h264_to_annex_b_bitstream_converter.cc",
    "//media/filters/h265_to_annex_b_bitstream_converter.cc",
    "//media/filters/in_memory_url_protocol.cc",
    "//media/filters/ivf_parser.cc",
    "//media/filters/media_file_checker.cc",
    "//media/filters/memory_data_source.cc",
    "//media/filters/offloading_video_decoder.cc",
    "//media/filters/passthrough_dts_audio_decoder.cc",
    "//media/filters/pipeline_controller.cc",
    "//media/filters/source_buffer_range.cc",
    "//media/filters/source_buffer_state.cc",
    "//media/filters/source_buffer_stream.cc",
    "//media/filters/stream_parser_factory.cc",
    "//media/filters/video_cadence_estimator.cc",
    "//media/filters/video_renderer_algorithm.cc",
    "//media/filters/vp9_bool_decoder.cc",
    "//media/filters/vp9_compressed_header_parser.cc",
    "//media/filters/vp9_parser.cc",
    "//media/filters/vp9_raw_bits_reader.cc",
    "//media/filters/vp9_uncompressed_header_parser.cc",
    "//media/filters/wsola_internals.cc",
    "//media/formats/common/offset_byte_queue.cc",
    "//media/formats/common/opus_constants.cc",
    "//media/formats/mp4/aac.cc",
    "//media/formats/mp4/avc.cc",
    "//media/formats/mp4/bitstream_converter.cc",
    "//media/formats/mp4/box_definitions.cc",
    "//media/formats/mp4/box_reader.cc",
    "//media/formats/mp4/dts.cc",
    "//media/formats/mp4/dtsx.cc",
    "//media/formats/mp4/es_descriptor.cc",
    "//media/formats/mp4/h264_annex_b_to_avc_bitstream_converter.cc",
    "//media/formats/mp4/hevc.cc",
    "//media/formats/mp4/mp4_avcc_parser_fuzzer.cc",
    "//media/formats/mp4/mp4_box_reader_fuzzer.cc",
    "//media/formats/mp4/mp4_stream_parser.cc",
    "//media/formats/mp4/sample_to_group_iterator.cc",
    "//media/formats/mp4/track_run_iterator.cc",
    "//media/formats/mpeg/adts_constants.cc",
    "//media/formats/mpeg/mpeg1_audio_stream_parser.cc",
    "//media/formats/mpeg/mpeg_audio_stream_parser_base.cc",
    "//media/mb/batching_media_log.cc",
    "//media/mb/MbMediaImpl.cpp",
    "//media/mb/renderer_webmediaplayer_delegate.cc",
    "//media/media_empty.cc",
    "//media/renderers/audio_renderer_impl.cc",
    "//media/renderers/decrypting_renderer.cc",
    "//media/renderers/decrypting_renderer_factory.cc",
    "//media/renderers/default_decoder_factory.cc",
    "//media/renderers/default_renderer_factory.cc",
    "//media/renderers/renderer_impl.cc",
    "//media/renderers/video_overlay_factory.cc",
    "//media/renderers/video_renderer_impl.cc",
    "//media/renderers/video_resource_updater.cc",
    #  "//media/renderers/win/media_engine_extension.cc",
    #  "//media/renderers/win/media_engine_notify_impl.cc",
    #  "//media/renderers/win/media_foundation_audio_stream.cc",
    #  "//media/renderers/win/media_foundation_protection_manager.cc",
    #  "//media/renderers/win/media_foundation_renderer.cc",
    #  "//media/renderers/win/media_foundation_rendering_mode.cc",
    #  "//media/renderers/win/media_foundation_source_wrapper.cc",
    #  "//media/renderers/win/media_foundation_stream_wrapper.cc",
    #  "//media/renderers/win/media_foundation_texture_pool.cc",
    #  "//media/renderers/win/media_foundation_video_stream.cc",
    "//media/video/fake_gpu_memory_buffer.cc",
    "//media/video/fake_video_encode_accelerator.cc",
    "//media/video/gpu_memory_buffer_video_frame_pool.cc",
    "//media/video/h264_bit_reader.cc",
    "//media/video/h264_level_limits.cc",
    "//media/video/h264_parser.cc",
    "//media/video/h264_poc.cc",
    "//media/video/h265_nalu_parser.cc",
    "//media/video/h265_parser.cc",
    "//media/video/h265_poc.cc",
    "//media/video/half_float_maker.cc",
    "//media/video/picture.cc",
    "//media/video/renderable_gpu_memory_buffer_video_frame_pool.cc",
    "//media/video/trace_util.cc",
    "//media/video/video_decode_accelerator.cc",
    "//media/video/video_encoder_fallback.cc",
    "//media/video/video_encoder_info.cc",
    "//media/video/video_encode_accelerator.cc",
    "//media/video/video_encode_accelerator_adapter.cc",
    "//mojo/public/cpp/platform/platform_handle.cc",
    "//services/media_session/public/cpp/media_position.cc",

    "//third_party/webrtc_overrides/low_precision_timer.cc",
    #  "//url/gurl.cc",

    "//third_party/blink/renderer/platform/media/buffered_data_source_host_impl.cc",
    "//third_party/blink/renderer/platform/media/cache_util.cc",
    "//third_party/blink/renderer/platform/media/multi_buffer.cc",
    "//third_party/blink/renderer/platform/media/multi_buffer_data_source.cc",
    "//third_party/blink/renderer/platform/media/multi_buffer_reader.cc",
    "//third_party/blink/renderer/platform/media/resource_multi_buffer_data_provider.cc",
    "//third_party/blink/renderer/platform/media/url_index.cc",
    "//third_party/blink/renderer/platform/media/video_frame_compositor.cc",
    "//third_party/blink/renderer/platform/media/webaudiosourceprovider_impl.cc",
    "//third_party/blink/renderer/platform/media/web_media_player_builder.cc",
    "//third_party/blink/renderer/platform/media/web_media_player_impl.cc",
    "//third_party/blink/renderer/platform/media/web_media_source_impl.cc",
    "//third_party/blink/renderer/platform/media/web_source_buffer_impl.cc",

  ]



}

